<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8B1B1"
    android:orientation="vertical"
    tools:context=".children">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:background="#4CAF50"
        app:srcCompat="@drawable/children" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sex"
        android:textColor="#1B1818"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etsexo2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/sex1"
        android:inputType="textPersonName"
        android:textColor="#184E1A"
        android:textColorHint="#479C4B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/tvpeso"
        android:textColor="#1B1212"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etpeso"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/etpeso"
        android:inputType="numberDecimal"
        android:textColor="#184E1A"
        android:textColorHint="#479C4B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/tvestatura"
        android:textColor="#191414"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etest"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/etest"
        android:inputType="numberDecimal"
        android:textColor="#184E1A"
        android:textColorHint="#479C4B"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@drawable/shape_button"
        android:text="@string/calcular"
        android:textColor="#090808"
        android:textSize="20sp"
        app:backgroundTint="#1F8E23"
        app:icon="@drawable/calcular"
        app:iconGravity="textStart" />

    <TextView
        android:id="@+id/tv_imc"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_back2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/shape_button"
        android:text="@string/b1"
        android:textColor="#100F0F"
        android:textSize="20sp"
        app:backgroundTint="#1F8E23"
        app:icon="@drawable/atras1"
        app:iconGravity="textStart" />

</LinearLayout>