<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8B1B1"
    tools:context=".normal_babies">

    <Button
        android:id="@+id/info1"
        android:layout_width="347dp"
        android:layout_height="81dp"
        android:background="@drawable/shape_button"
        android:text="@string/rec10"
        android:textColor="#100F0F"
        android:textSize="18sp"
        app:backgroundTint="#3D9FCD"
        app:icon="@drawable/question"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <ScrollView
        android:layout_width="364dp"
        android:layout_height="183dp"
        android:contentDescription="@string/scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797">

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/textView46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#95C85A"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/tvrecnorm"
            android:textColor="#100F0F"
            android:textSize="24sp" />
    </ScrollView>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="413dp"
        android:layout_height="163dp"
        android:contentDescription="@string/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_1" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/tvnormal"
        android:textAlignment="center"
        android:textColor="#205722"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="221dp"
        android:layout_height="196dp"
        android:contentDescription="@string/ivnormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        app:srcCompat="@drawable/img_3" />

</androidx.constraintlayout.widget.ConstraintLayout>